--- a/src/BloomFilter.CSRedis/BloomFilter.CSRedis.csproj
+++ b/src/BloomFilter.CSRedis/BloomFilter.CSRedis.csproj
@@ -3,7 +3,7 @@
 		<AssemblyName>BloomFilter.CSRedis</AssemblyName>
 		<AssemblyTitle>BloomFilter.CSRedis</AssemblyTitle>
 		<PackageId>BloomFilter.CSRedis.NetCore</PackageId>
-		<TargetFrameworks>net462;netstandard2.0;net5.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>net462;netstandard2.0;net5.0</TargetFrameworks>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);CS1591</NoWarn>
