--- a/src/BloomFilter.Redis/BloomFilter.Redis.csproj
+++ b/src/BloomFilter.Redis/BloomFilter.Redis.csproj
@@ -3,7 +3,7 @@
 		<AssemblyName>BloomFilter.Redis</AssemblyName>
 		<AssemblyTitle>BloomFilter.Redis</AssemblyTitle>
 		<PackageId>BloomFilter.Redis.NetCore</PackageId>
-		<TargetFrameworks>net462;netstandard2.0;net5.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>net462;netstandard2.0;net5.0</TargetFrameworks>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);CS1591</NoWarn>
